[main] update bug route, update project route, fix for get all projects
