# src/api/bug/bug.service.ts
@@ -4,6 +4,7 @@ import { CUSTOM_ERROR_MESSAGES, SUCCESS_MESSAGE } from '../../utils/constants';
 import { HttpException } from '../../utils/http-exception';
 import { UserInfo } from '../../utils/interfaces/auth.interface';
 import { CreateBugReqDto } from './dtos/create-bug.dto';
+import { UpdateBugDto } from './dtos/update-bug.dto';
 
 const getProjectBugs = async (reqUser: UserInfo, projectId: string) => {
   const { id: userId, role } = reqUser;
@@ -129,4 +130,54 @@ const assignBugToMe = async (reqUser: UserInfo, bugId: string) => {
   return { message: SUCCESS_MESSAGE };
 };
 
-export { getProjectBugs, createBug, assignBugToMe };
+
+const updateBug = async (reqUser: UserInfo, bugId: string, body: UpdateBugDto) => {
+  const { id: userId } = reqUser;
+  const { assignedToId, solution, status, priority, title, details, testSteps, resolution, issueLink } = body;
+  const bug = await prisma.bug.findFirst({
+    where: {
+      id: bugId,
+    },
+    include: {
+      project: {
+        include: {
+          projectTeam: true,
+        },
+      },
+      assignedTo: true,
+    },
+  });
+
+  if (!bug) {
+    throw new HttpException(CUSTOM_ERROR_MESSAGES.NOT_FOUND, 404);
+  }
+
+  if (!bug.project.projectTeam.some((teamMember) => teamMember?.id === userId))
+    throw new HttpException(CUSTOM_ERROR_MESSAGES.FORBIDDEN, 403);
+
+  if (assignedToId && !bug.project.projectTeam.some((teamMember) => teamMember?.id === assignedToId))
+    throw new HttpException(CUSTOM_ERROR_MESSAGES.BAD_REQUEST, 400);
+
+  const assignedToObject = assignedToId ? { connect: { id: assignedToId } } : undefined;
+
+  await prisma.bug.update({
+    where: {
+      id: bugId,
+    },
+    data: {
+      assignedTo: assignedToObject,
+      solution,
+      bugStatus: status,
+      priority,
+      title,
+      details,
+      testSteps,
+      resolution,
+      issueLink,
+    },
+  });
+
+  return { message: SUCCESS_MESSAGE };
+}
+
+export { getProjectBugs, createBug, assignBugToMe, updateBug };
