# src/api/project/dtos/update-project.dto.ts
@@ -1,0 +1,11 @@
+import { IsOptional, IsString } from "class-validator";
+
+export class UpdateProjectDto {
+  @IsOptional()
+  @IsString()
+  projectName?: string;
+
+  @IsOptional()
+  @IsString()
+  repositoryName?: string;
+}
